# sdk

./: gradle.properties  settings.gradle
analytics/: build.gradle
analytics/src/main/: AndroidManifest.xml
apkkiller/: build.gradle
apkkiller/src/main/: AndroidManifest.xml
app/: build.gradle
app/libs/: templib-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MonoString.h  inlinehook.cpp  is_active_and_enabled.h  native-lib.cpp  normal-function.h  tools.cpp  tools.h
app/src/main/cpp/AK/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/AK/include/: AndHook.h  il2cpp-function-addr32.h  il2cpp-function-addr64.h
app/src/main/cpp/attach_thread/: native-lib.cpp
app/src/main/cpp/dev/: CMakeLists.txt  MonoString.h  arm.h  arm64.h  native-lib.cpp  normal-function.h  string_map.h  text_set_text.h  valid.h
app/src/main/cpp/il2cpp/: CMakeLists.txt  arm.h  arm64.h  native-lib.cpp  text_bridage.h  valid.h
app/src/main/cpp/string/: csharpstring.h
autopack/: build.gradle  proguard-rules.pro
autopack/libs/: mpg-cm-v1.0.6.aar
autopack/src/main/: AndroidManifest.xml
gifchest/: build.gradle
gifchest/libs/: glide-4.11.0.aar
gifchest/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
inlinhook/: build.gradle
inlinhook/src/main/: AndroidManifest.xml
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
mylibrary2/: build.gradle
pay_module/: build.gradle  proguard-rules.pro
pay_module/libs/: mpg-pay-v3.1.0.aar
speed/: build.gradle
templib/: build.gradle
(+2400 files in other folders)
